==> TcMcKrLiTb/91MCU_nuedc/MSPM0G3507/oled_096/oled_hardware_spi/oled.c <==
#include <stdlib.h>
#include <string.h>
#include <cstdlib>
#include <cstring>
#include <stdlib.h>
#include <string.h>
#include "oled.h"
#define system_delay_ms(m) delay_cycles((m * (CPUCLK_FREQ / 1000)))

void OLED_WR_Byte(unsigned dat, unsigned cmd)
{
    while (DL_SPI_isBusy(SPI_0_INST))
        ;
    if (cmd)
        OLED_DC_Set();
    else
        OLED_DC_Clr();
    // OLED_CS_Clr();
    delay_cycles(100);
    DL_SPI_transmitData8(SPI_0_INST, dat);
    // OLED_CS_Set();
}

void OLED_Display(void)
{
    uint8_t i, n;

    for (i = 0; i < PAGE_SIZE; i++)
    {
        OLED_WR_Byte(YLevel + i, OLED_CMD);
        OLED_WR_Byte(XLevelL, OLED_CMD);
        OLED_WR_Byte(XLevelH, OLED_CMD);
        // for (n = 0; n < WIDTH; n++)
        // {
        //     OLED_WR_Byte(OLED_buffer[i * WIDTH + n], OLED_DATA);
        // }
        while (DL_SPI_isBusy(SPI_0_INST))
            ;
        OLED_DC_Set();
        gSPIDataTransmitted = false;
        DL_DMA_setSrcAddr(DMA, DMA_CH0_CHAN_ID,
                          (uint32_t)&OLED_buffer[i * WIDTH]);
        DL_DMA_setDestAddr(DMA, DMA_CH0_CHAN_ID,
                           (uint32_t)(&SPI_0_INST->TXDATA));
        DL_DMA_setTransferSize(DMA, DMA_CH0_CHAN_ID, WIDTH);
        DL_DMA_enableChannel(DMA, DMA_CH0_CHAN_ID);
        while (false == gSPIDataTransmitted)
            ;
        delay_cycles(100);
        OLED_DC_Clr();
    } // update full screen
}

void OLED_Init_GPIO(void)
{
    DL_GPIO_clearPins(GPIO_OLED_PORT,
                      GPIO_OLED_PIN_DC_PIN | GPIO_OLED_PIN_RES_PIN);
}

void OLED_Init(void)
{
    OLED_Reset();                 // Reset the OLED
    OLED_WR_Byte(0xAE, OLED_CMD); /*display off*/
    OLED_WR_Byte(0x00, OLED_CMD); /*set lower column address*/
    OLED_WR_Byte(0x10, OLED_CMD); /*set higher column address*/
    OLED_WR_Byte(0x40, OLED_CMD); /*set display start line*/
    OLED_WR_Byte(0xB0, OLED_CMD); /*set page address*/
    OLED_WR_Byte(0x81, OLED_CMD); /*contract control*/
    OLED_WR_Byte(0xFF, OLED_CMD); /*128*/
    OLED_WR_Byte(0xA1, OLED_CMD); /*set segment remap*/
    OLED_WR_Byte(0xA6, OLED_CMD); /*normal / reverse*/
    OLED_WR_Byte(0xA8, OLED_CMD); /*multiplex ratio*/
    OLED_WR_Byte(0x3F, OLED_CMD); /*duty = 1/64*/
    OLED_WR_Byte(0xC8, OLED_CMD); /*Com scan direction*/
    OLED_WR_Byte(0xD3, OLED_CMD); /*set display offset*/
    OLED_WR_Byte(0x00, OLED_CMD);
    OLED_WR_Byte(0xD5, OLED_CMD); /*set osc division*/
    OLED_WR_Byte(0x80, OLED_CMD);
    OLED_WR_Byte(0xD9, OLED_CMD); /*set pre-charge period*/
    OLED_WR_Byte(0XF1, OLED_CMD);
    OLED_WR_Byte(0xDA, OLED_CMD); /*set COM pins*/
    OLED_WR_Byte(0x12, OLED_CMD);
    OLED_WR_Byte(0xDB, OLED_CMD); /*set vcomh*/
    OLED_WR_Byte(0x30, OLED_CMD);
    OLED_WR_Byte(0x8D, OLED_CMD); /*set charge pump disable*/
    OLED_WR_Byte(0x14, OLED_CMD);
    OLED_WR_Byte(0xAF, OLED_CMD); /*display ON*/
    NVIC_EnableIRQ(SPI_0_INST_INT_IRQN);
}
