==> kllsd/rx5808_x2_otg/X035C8T6_RX5808/Hardware/oled/oled.c <==
#include "ch32x035.h"
#include "oled.h"
#include "stdlib.h"
#include "string.h"
#include "spi.h"
#include "debug.h"

void OLED_WR_Byte(unsigned dat,unsigned cmd)
{
	if(cmd)
	{
		OLED_DC_Set();
	}
	else
	{
		OLED_DC_Clr();
	}
	while(SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_TXE) == RESET); //等待发送区空
	GPIO_ResetBits(GPIOA, GPIO_Pin_4);
	SPI_I2S_SendData(SPI1, dat); //发送一个byte
	while(SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_BSY) != RESET); //等待发送区空
	GPIO_SetBits(GPIOA, GPIO_Pin_4);
}

void OLED_Display(void)
{
	u8 i,n;
	while(SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_TXE) == RESET); //等待发送区空
	GPIO_ResetBits(GPIOA, GPIO_Pin_4);
	for(i=0;i<PAGE_SIZE;i++)
	{
	    OLED_DC_Clr();
	    SPI_I2S_SendData(SPI1, YLevel+i); //发送一个byte
	    while(SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_BSY) != RESET); //等待发送区空
	    SPI_I2S_SendData(SPI1, XLevelL); //发送一个byte
	    while(SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_BSY) != RESET); //等待发送区空
	    SPI_I2S_SendData(SPI1, XLevelH); //发送一个byte
	    while(SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_BSY) != RESET); //等待发送区空
//		OLED_WR_Byte (YLevel+i,OLED_CMD);    //设置页地址（0~7）
//		OLED_WR_Byte (XLevelL,OLED_CMD);      //设置显示位置—列低地址
//		OLED_WR_Byte (XLevelH,OLED_CMD);      //设置显示位置—列高地址
	    OLED_DC_Set();
		for(n=0;n<WIDTH;n++)
		{
		    SPI_I2S_SendData(SPI1, OLED_buffer[i*WIDTH+n]); //发送一个byte
		    while(SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_BSY) != RESET); //等待发送区空
//			OLED_WR_Byte(OLED_buffer[i*WIDTH+n],OLED_DATA);
		}
	}
	GPIO_SetBits(GPIOA, GPIO_Pin_4);
}

void OLED_Init_GPIO(void)
{
	GPIO_InitTypeDef GPIO_InitStructure_OLED;
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOA, ENABLE);
	GPIO_InitStructure_OLED.GPIO_Pin =  GPIO_Pin_2| GPIO_Pin_3;
	GPIO_InitStructure_OLED.GPIO_Mode = GPIO_Mode_Out_PP;
	GPIO_InitStructure_OLED.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_Init(GPIOA, &GPIO_InitStructure_OLED);
}

void OLED_Init(void)
{
	SPI1_Init();
 	OLED_Init_GPIO();
 	Delay_Ms(200);
	OLED_Reset();

/*************************初始化SSD1306*************************/
	OLED_WR_Byte(0xAE,OLED_CMD); /*display off*/
	OLED_WR_Byte(0x00,OLED_CMD); /*set lower column address*/
	OLED_WR_Byte(0x10,OLED_CMD); /*set higher column address*/
	OLED_WR_Byte(0x40,OLED_CMD); /*set display start line*/ 
	OLED_WR_Byte(0xB0,OLED_CMD); /*set page address*/
	OLED_WR_Byte(0x81,OLED_CMD); /*contract control*/
	OLED_WR_Byte(0xFF,OLED_CMD); /*128*/
	OLED_WR_Byte(0xA1,OLED_CMD); /*set segment remap*/ 
	OLED_WR_Byte(0xA6,OLED_CMD); /*normal / reverse*/
	OLED_WR_Byte(0xA8,OLED_CMD); /*multiplex ratio*/ 
	OLED_WR_Byte(0x3F,OLED_CMD); /*duty = 1/64*/
	OLED_WR_Byte(0xC8,OLED_CMD); /*Com scan direction*/
	OLED_WR_Byte(0xD3,OLED_CMD); /*set display offset*/ 
	OLED_WR_Byte(0x00,OLED_CMD);
	OLED_WR_Byte(0xD5,OLED_CMD); /*set osc division*/ 
	OLED_WR_Byte(0x80,OLED_CMD);
	OLED_WR_Byte(0xD9,OLED_CMD); /*set pre-charge period*/ 
	OLED_WR_Byte(0XF1,OLED_CMD);
	OLED_WR_Byte(0xDA,OLED_CMD); /*set COM pins*/ 
	OLED_WR_Byte(0x12,OLED_CMD);
	OLED_WR_Byte(0xDB,OLED_CMD); /*set vcomh*/ 
	OLED_WR_Byte(0x30,OLED_CMD);
	OLED_WR_Byte(0x8D,OLED_CMD); /*set charge pump disable*/ 
	OLED_WR_Byte(0x14,OLED_CMD);
	OLED_WR_Byte(0xAF,OLED_CMD); /*display ON*/
/*************************************************************/

	OLED_Clear(0);
}
